--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@ body {
   z-index: 1;
 }
 
-.background {
+.welcomeSection {
   position: relative;
   background-color: #0d1116;
   height: 100vh;
