--- a/app/globals.css
+++ b/app/globals.css
@@ -10,33 +10,29 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  height: 100%;
+  width: 100%;
 }
 
-.title {
-  color: #a2d2fa;
-  /* font-weight: bold; */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 20px;
+/* .title {
+  color: #a2d2fa; */
+/* position: absolute;
+  top: 40%;
+  left: 18%; */
+/* font-size: 20px;
   z-index: 1;
-}
-
-.welcomeSection {
-  position: relative;
-  background-color: #0d1116;
-  height: 100vh;
-  max-width: 100%;
-  width: 100vw;
-}
+} */
+/* .women {
+  position: absolute;
+  left: 60%;
+  top: 20%;
+} */
 
 .leftBar {
-  z-index: 1;
-  position: fixed;
   display: flex;
   flex-direction: column;
-  left: 0%;
+  padding-right: 20px;
+  background-color: #0d1116;
 }
 
 .leftBarIcon {
@@ -49,6 +45,10 @@ body {
 
 .leftBarIcon:hover {
   color: rgb(215, 215, 215);
+}
+
+.svg-icon {
+  fill: blue;
 }
 
 .icon-container {
@@ -67,4 +67,9 @@ body {
   width: 3px;
   height: 100%;
   background-color: #0078d4;
+}
+
+.mainSection {
+  height: 100%;
+  width: 100%;
 }
